# ChangeLog for sys-cluster/neutron
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-cluster/neutron/ChangeLog,v 1.56 2015/04/13 03:27:20 prometheanfire Exp $

*neutron-2014.2.3 (13 Apr 2015)

  13 Apr 2015; Matthew Thode <prometheanfire@gentoo.org>
  +neutron-2014.2.3.ebuild, -neutron-2014.2.2-r1.ebuild,
  neutron-2014.2.9999.ebuild:
  bup

  24 Mar 2015; Matthew Thode <prometheanfire@gentoo.org>
  neutron-2014.2.2-r1.ebuild, neutron-2014.2.9999.ebuild:
  newer module naming bug 532848

*neutron-2014.2.2-r1 (13 Feb 2015)

  13 Feb 2015; Matthew Thode <prometheanfire@gentoo.org>
  +files/0001-Fixes-bug-in-interface-handling-of-ip_lib.py.patch,
  +files/0002-moving-vxlan-module-check-to-sanity-checks-and-makin.patch,
  +files/0003-fixes-error-logging-to-use-the-right-exception-paren.patch,
  +neutron-2014.2.2-r1.ebuild, -neutron-2014.2.2.ebuild,
  neutron-2014.2.9999.ebuild:
  backporting patches from kilo for better usage in juno

  09 Feb 2015; Matthew Thode <prometheanfire@gentoo.org>
  neutron-2014.2.2.ebuild, neutron-2014.2.9999.ebuild:
  adding missing dep

*neutron-2014.2.2 (08 Feb 2015)

  08 Feb 2015; Matthew Thode <prometheanfire@gentoo.org>
  +neutron-2014.2.2.ebuild, -files/CVE-2014-8153-juno.patch,
  -neutron-2014.2.1-r1.ebuild, -neutron-9999.ebuild, neutron-2014.2.9999.ebuild:
  bup

  01 Feb 2015; Matthew Thode <prometheanfire@gentoo.org>
  neutron-2014.2.9999.ebuild:
  updating deps on 2014.2.9999

*neutron-2014.2.1-r1 (13 Jan 2015)

  13 Jan 2015; Matthew Thode <prometheanfire@gentoo.org>
  +files/CVE-2014-8153-juno.patch, +neutron-2014.2.1-r1.ebuild,
  -files/neutron-confd, -files/neutron-confd-2, -files/neutron-initd,
  -files/neutron-initd-2, -files/neutron-sudoers, -files/nicira.patch,
  -files/sphinx_mapping.patch, -neutron-2014.2.1.ebuild, -neutron-2014.2.ebuild,
  neutron-2014.2.9999.ebuild, neutron-9999.ebuild: